test/errors/notused.sp
sorts
#s = {not}.
predicates
rules
